--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -167,20 +167,6 @@ jobs:
       - run:
           name: 'Jest'
           command: 'npm run test'
-      
-      - run:
-          name: Start Chrome Driver
-          command: ./vendor/laravel/dusk/bin/chromedriver-linux
-          background: true
-
-      - run:
-          name: Run Laravel Server
-          command: php artisan serve
-          background: true
-
-      - run:
-          name: Run Laravel Dusk Tests
-          command: php artisan dusk
 
       #- store_artifacts:
       #    path: coverage
@@ -228,23 +214,17 @@ jobs:
             echo "APP_NAME=ProcessMaker" >> .env.dusk.staging
             echo "APP_ENV=staging" >> .env.dusk.staging
             echo "DB_HOSTNAME=${QA_RDS_HOST}" >> .env.dusk.staging
-            echo "DB_DATABASE=${QA_DB_NAME}" >> .env.dusk.staging
+            echo "DB_DATABASE=${QA_DUSK_DB_NAME}" >> .env.dusk.staging
             echo "DB_USERNAME=${QA_RDS_USERNAME}" >> .env.dusk.staging
             echo "DB_PASSWORD=${QA_RDS_PASSWORD}" >> .env.dusk.staging
             echo "DATA_DB_DRIVER=mysql" >> .env.dusk.staging
             echo "DATA_DB_HOST=${QA_RDS_HOST}" >> .env.dusk.staging
-            echo "DATA_DB_DATABASE=${QA_DATA_DB_NAME}" >> .env.dusk.staging
+            echo "DATA_DB_DATABASE=${QA_DUSK_DB_NAME}" >> .env.dusk.staging
             echo "DATA_DB_PORT=3306" >> .env.dusk.staging
             echo "DATA_DB_USERNAME=${QA_RDS_USERNAME}" >> .env.dusk.staging
             echo "DATA_DB_PASSWORD=${QA_RDS_PASSWORD}" >> .env.dusk.staging
             echo "APP_URL=https://${BUILD_NAME}${QA_HOST_SUFFIX}" >> .env.dusk.staging
-            # Configuration for the connection to the new database 
-            echo "DUSK_DB_DRIVER=mysql" >> .env.dusk.staging
-            echo "DUSK_DB_HOST=${QA_RDS_HOST}" >> .env.dusk.staging
-            echo "DUSK_DB_DATABASE=${QA_DUSK_DB_NAME}" >> .env.dusk.staging
-            echo "DUSK_DB_PORT=3306" >> .env.dusk.staging
-            echo "DUSK_DB_USERNAME=${QA_RDS_USERNAME}" >> .env.dusk.staging
-            echo "DUSK_DB_PASSWORD=${QA_RDS_PASSWORD}" >> .env.dusk.staging 
+            
             # Put in configuration for SauceLabs Cloud based Browser Testing
             echo "SAUCELABS_BROWSER_TESTING=true" >> .env.dusk.staging
             echo "SAUCELABS_USERNAME=${SAUCELABS_USERNAME}" >> .env.dusk.staging
@@ -263,7 +243,8 @@ jobs:
             # Generate unique app key
             php artisan key:generate --force
             # Copy over our test oauth keys. Regular install will create new ones
-            cp tests/storage/keys/* storage/keys/          
+            cp tests/storage/keys/* storage/keys/
+            cat .env.dusk.staging          
       - run:
           name: 'QA Package'
           command: './vendor/bin/phing package -Dpackage_name=processmaker-qa-${BUILD_NAME}.tar.gz'
@@ -285,7 +266,7 @@ jobs:
             # Create MYSQL Database
             ssh -o "StrictHostKeyChecking no" -o "ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p" qa-processmakerbuilds "mysql -h ${QA_RDS_HOST} -u ${QA_RDS_USERNAME} -p${QA_RDS_PASSWORD} -e \"CREATE DATABASE IF NOT EXISTS ${QA_DB_NAME}\""
             ssh -o "StrictHostKeyChecking no" -o "ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p" qa-processmakerbuilds "mysql -h ${QA_RDS_HOST} -u ${QA_RDS_USERNAME} -p${QA_RDS_PASSWORD} -e \"CREATE DATABASE IF NOT EXISTS ${QA_DATA_DB_NAME}\""
-            #ssh -o "StrictHostKeyChecking no" -o "ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p" qa-processmakerbuilds "mysql -h ${QA_RDS_HOST} -u ${QA_RDS_USERNAME} -p${QA_RDS_PASSWORD} -e \"CREATE DATABASE IF NOT EXISTS ${QA_DUSK_DB_NAME}\""
+            ssh -o "StrictHostKeyChecking no" -o "ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p" qa-processmakerbuilds "mysql -h ${QA_RDS_HOST} -u ${QA_RDS_USERNAME} -p${QA_RDS_PASSWORD} -e \"CREATE DATABASE IF NOT EXISTS ${QA_DUSK_DB_NAME}\""
             # Run php artisan migrate:fresh --seed to have a clean installed database in RDS
             ssh -o "StrictHostKeyChecking no" -o "ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p" qa-processmakerbuilds "php ~/builds/$BUILD_NAME/artisan migrate:fresh --seed --force"
             # Setup Media Link
