--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,6 @@ jobs:
             echo 'export QA_DB_NAME=$(echo "processmaker$CIRCLE_BRANCH" | tr -d /.-)' >> $BASH_ENV
             echo 'export QA_DATA_DB_NAME=$(echo "processmaker_data$CIRCLE_BRANCH" | tr -d /.-)' >> $BASH_ENV
             source $BASH_ENV
-
       - run:
           name: QA Host SSH Host Identifier Import
           command: |
@@ -44,7 +43,6 @@ jobs:
             echo $BUILDBOT_HOST_IDENTIFIER >> ~/.ssh/known_hosts
             echo $QA_PROCESSMAKERBUILDS_HOST_IDENTIFIER	>> ~/.ssh/known_hosts
             chmod 0600 ~/.ssh/known_hosts
-
       - checkout
 
       # Install PHP dependencies
@@ -72,7 +70,6 @@ jobs:
             sudo pecl install sqlsrv
             sudo pecl install pdo_sqlsrv
             sudo docker-php-ext-enable sqlsrv pdo_sqlsrv
-
       # Install old libssl-1.0.0 due to ODBC13 issue. See: https://github.com/Microsoft/msphpsql/issues/484
       - run:
           name: 'ODBC13 libssl workaround'
@@ -80,7 +77,6 @@ jobs:
             echo "deb http://deb.debian.org/debian jessie main" | sudo tee -a /etc/apt/sources.list
             sudo apt-get update
             sudo apt-get install libssl1.0.0
-
       # Download and cache dependencies
       - restore_cache:
           keys:
@@ -114,13 +110,10 @@ jobs:
             php artisan l5:generate
             mkdir -p /tmp/processmaker-sdk-php
             php artisan processmaker:sdk php /tmp/processmaker-sdk-php
-
             mkdir -p /tmp/processmaker-sdk-node
             php artisan processmaker:sdk javascript /tmp/processmaker-sdk-node
-
             mkdir -p /tmp/processmaker-sdk-lua
             php artisan processmaker:sdk lua /tmp/processmaker-sdk-lua
-
       - run:
           name: Configure scripts executor
           command: |
@@ -128,7 +121,6 @@ jobs:
             docker pull processmaker4/executor-lua:latest
             docker pull processmaker4/executor-node:latest
             sudo mkdir -m777 /opt/executor
-
       #- run: sudo docker-php-ext-enable xdebug
 
       # Build frontend assets for production
@@ -196,7 +188,6 @@ jobs:
             echo "APP_URL=https://${BUILD_NAME}${QA_HOST_SUFFIX}" >> .env
             echo "PROXIES=*" >> .env
             echo "PROXIES_AWS=true" >> .env
-
             # Put in configuration file for Broadcaster
             echo "BROADCAST_DRIVER=redis" >> .env
             echo "BROADCASTER_HOST=%%BROADCASTER_HOST%%" >> .env
@@ -207,7 +198,6 @@ jobs:
             echo "LARAVEL_ECHO_SERVER_AUTH_HOST=%%AUTHHOST%%" >> .env
             echo "LARAVEL_ECHO_SERVER_PORT=%%ECHOPORT%%" >> .env
             echo "LARAVEL_ECHO_SERVER_DEBUG=true" >> .env
-
             echo "APP_KEY=" >> .env.dusk.staging
             echo "APP_DEBUG=FALSE" >> .env.dusk.staging
             echo "APP_NAME=ProcessMaker" >> .env.dusk.staging
@@ -222,8 +212,7 @@ jobs:
             echo "DATA_DB_PORT=3306" >> .env.dusk.staging
             echo "DATA_DB_USERNAME=${QA_RDS_USERNAME}" >> .env.dusk.staging
             echo "DATA_DB_PASSWORD=${QA_RDS_PASSWORD}" >> .env.dusk.staging
-            echo "APP_URL=https://spark-ps.processmaker.net" >> .env.dusk.staging
-
+            echo "APP_URL=https://${BUILD_NAME}${QA_HOST_SUFFIX}" >> .env.dusk.staging 
             # Put in configuration for SauceLabs Cloud based Browser Testing
             echo "SAUCELABS_BROWSER_TESTING=true" >> .env.dusk.staging
             echo "SAUCELABS_USERNAME=${SAUCELABS_USERNAME}" >> .env.dusk.staging
@@ -238,11 +227,10 @@ jobs:
             echo "LARAVEL_ECHO_SERVER_AUTH_HOST=%%AUTHHOST%%" >> .env.dusk.staging
             echo "LARAVEL_ECHO_SERVER_PORT=%%ECHOPORT%%" >> .env.dusk.staging
             echo "LARAVEL_ECHO_SERVER_DEBUG=true" >> .env.dusk.staging           
-
             # Generate unique app key
             php artisan key:generate --force
             # Copy over our test oauth keys. Regular install will create new ones
-            cp tests/storage/keys/* storage/keys/          
+            cp tests/storage/keys/* storage/keys/
       - run:
           name: 'QA Package'
           command: './vendor/bin/phing package -Dpackage_name=processmaker-qa-${BUILD_NAME}.tar.gz'
@@ -274,7 +262,6 @@ jobs:
             ssh -o "StrictHostKeyChecking no" -o "ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p" qa-processmakerbuilds "sudo /bin/bash /root/cloudops/containerDeploy.sh $BUILD_NAME"
             # Generate Passport Keys
             ssh -o "StrictHostKeyChecking no" -o "ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p" qa-processmakerbuilds "cd ~/builds/$BUILD_NAME && php artisan passport:keys"
-
       - run:
           name: 'SauceLabs Browser Tests: Chrome'
           command: 'ssh -o "StrictHostKeyChecking no" -o "ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p" qa-processmakerbuilds "cd ~/builds/$BUILD_NAME && php artisan dusk"'
