--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -273,6 +273,7 @@ jobs:
             sudo wget https://${BUILD_NAME}${QA_HOST_SUFFIX}
             sudo ls /tmp/vr
             sudo cat /tmp/vr/*
+            ssh -o "StrictHostKeyChecking no" -o "ProxyCommand ssh buildbot.processmaker.net -A -W %h:%p" qa-processmakerbuilds "wget https://${BUILD_NAME}${QA_HOST_SUFFIX} " 
 
       - run:
           name: 'SauceLabs Browser Tests: Chrome'
